--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
